--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,3 +8,10 @@ indexing-settings:
       name: Skillbox
     - url: https://www.playback.ru
       name: PlayBack.Ru
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/search_engine
+    username: root
+    password: Rfvhu1941.
+    driver-class-name: com.mysql.cj.jdbc.Driver
